20170415 - Added <url value="" default=""> tag, uses $_GET variable
           and remembers values via sessions
20170808 - Added <ace ...> tag, allows for new syntax highlighting with an
           editable interface.
20170809 - upgraded components:
           highlight.js 9.9.0 -> 9.12.0
20170826 - added <calphp src="phpfile.php"> tag, that will include the php file
           if it exists - this is dangerous but really useful
20170827 - changed all $_POST and $_GET variables to $_REQUEST
20171016 - Added auto-generated <replace> variables.
20171016 - Updated priorities, files in calendar/ will be read before root
           this supports a manual that is updated with patching
20171022 - Editing of files now supported (if web user has permissions)
         - Allow for sideview of html as typing
20171024 - removed option to set $COMPONETS, generated automatically
20171027 - Updated Security - Years are now taken into account for unlocking
           files.
20171028 - Initial Move to GITHUB!!!
20171030 - Updated Security - if the $ACCESS_FILE or $CLASS_FILE exist but
           are unreadable, show an error and do not provided any files to
           the students.
20171103 - BUG FIX: Updated directory read code to handle class event types that
           only appear in $COMBINE
         - Updated checks for access and virtual files.
         - Added the ability to set $LOCK = true, or $LOCK=filename which will
           prevent students from viewing content.
20171203 - Updated Security to a Challenge / Response concept with a SHA256
           password replacement on the client side.
20171208 - Added $CUSTOMCSS which allows for type specific custom CSS
20171217 - Added the ability for dynamic date based unlocking (based on the
           date that an item appears on the calendar impacted by some delta)
           Format in the access files is:
           class_1 -2
           The above would set the class to appear 2 days prior to the event