@@ -261,6 +261,15 @@ lab/lab-solution           12  15 2020</code></pre>
   To have the item appear on the same day, just mark it as +0 or -0 days.
   <pre><code class="html">class_2 -0</code></pre>
 </p>
+<p>
+  An additional feature is the ability to set the unlock day based on day of the
+  week in a similar fashion.  Example:
+  <pre><code class="html">class -sunday</code></pre>
+</p>
+<p>
+  In this example all classes would automatically unlock the Sunday before the
+  class.
+</p>
 
 <a name="vfiles"></a>
 <h4>Virtual Files</h4>
